1.1_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projet-3k8s
  labels:
    name: projet-3k8s
