1.3_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: projet-3k8s
  labels:
    application: database
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: kubway/persistent-flask-app-db:1.0.0
        resources:
          requests:
            cpu: "250m"  # 250 milliCPU = 0.25 CPU
            memory: "512Mi"  # 512 MB de RAM
          limits:
            cpu: "500m"  # 500 milliCPU = 0.5 CPU max
            memory: "1Gi"  # 1 Go de RAM max
        ports:
        - containerPort: 5432
