1.4_postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: projet-3k8s
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432   # Port accessible à l'intérieur du cluster
      targetPort: 5432  # Port du conteneur PostgreSQL
  clusterIP: None  # Utilisation d'un ClusterIP pour rendre le service interne uniquement
